--- a/StateManagement_Cookies/.settings/org.eclipse.wst.common.component
+++ b/StateManagement_Cookies/.settings/org.eclipse.wst.common.component
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
         
-    <wb-module deploy-name="LoginPage_Validation_database">
+    <wb-module deploy-name="Servlet_loadOnStartup">
                 
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
                 
-        <property name="java-output-path" value="/LoginPage_Validation_database/build/classes"/>
-        <property name="context-root" value="Register_New_User"/>
+        <property name="java-output-path" value="/Servlet_loadOnStartup/build/classes"/>
+        <property name="context-root" value="StateManagement_Cookies"/>
             
     </wb-module>
     
